@@ -115,7 +115,8 @@ subprojects {
                                  "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
                                  "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED",
                                  "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                                 "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED"]
+                                 "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED"
+        ]
     }
 
     compileTestJava {
@@ -260,13 +261,14 @@ subprojects {
                  "--add-opens=java.base/java.io=ALL-UNNAMED",
                  "--add-opens=java.base/java.util=ALL-UNNAMED",
                  "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+                "--enable-native-access=ALL-UNNAMED",
                  "-XX:+UnlockDiagnosticVMOptions",
                  "-XX:+DebugNonSafepoints",
                  //"-XX:+UseShenandoahGC",
-            //     "-Xlog:gc*=debug:file=g1.log",
-//                 "-XX:+UseZGC",
+                 "-Xlog:gc*=debug:file=g1.log",
+                 "-XX:+UseZGC",
 //                 "-XX:+ZGenerational",
-             //    "-verbose:gc",
+                 "-verbose:gc",
                  "-XX:+HeapDumpOnOutOfMemoryError",
                  //"-XX:HeapDumpPath=heapdump.hprof",
                  "-XX:+UseStringDeduplication",
@@ -285,7 +287,7 @@ subprojects {
                 /* "-XX:MaxInlineSize=500" */])
 
         minHeapSize = '5g'
-        maxHeapSize = '8g'
+        maxHeapSize = '12g'
     }
 }
 
